apps/websocket-dc/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-dc
  namespace: websocket-dc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-dc
  template:
    metadata:
      labels:
        app: websocket-dc
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: websocket-dc
          ports:
            - containerPort: 3000
              name: web
          image: registry.kvlk.hu/websocket-dc:4-73b2b6e # {"$imagepolicy": "flux-system:websocket-dc-policy"}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-dc
  labels:
    app: websocket-dc
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: websocket-dc
