apps/websocket-dc/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: websocket-dc
  namespace: websocket-dc
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "websocket-dc.kvlk.hu"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: websocket-dc
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
