apps/websocket-dc/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: websocket-dc
spec:
  endpointSelector:
    matchLabels:
      app: websocket-dc
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: eg
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "3000"
